# phd_thesis

./: .gitignore  .gitmodules  404.html  LICENSE  Makefile  README.md  _config.yml  copyfigs.sh  give_figures_path_info.py  index.html  make_pandoc_site.sh  mkdocs.yml  parse-html.lua  pyproject.toml  references.bib  references_cleaned.bib  section_06_aph_hw template.md  sitemap.xml  snippets.json  test_convert.sh
.github/workflows/: thesis.yml
abbreviations/: index.html
chapter_01/: index.html
chapter_01/section_00_title/: index.html
chapter_01/section_01_header/: index.html
chapter_01/section_01_introduction/: index.html
chapter_02/: index.html
chapter_03/: index.html
chapter_03/code/: test_1.json
chapter_04/: index.html
chapter_05/: index.html
chapter_06/: index.html
chapter_07/: index.html
chapter_08/: index.html
chapter_09/: index.html
dst/: thesis.tex
frontmatter/: short-captions.lua
future_directions/: index.html
javascripts/: lightbox.js  mathjax.js
overrides/: main.html
pandoc_site/: CNAME  abbreviations.md  index.md  metadata.yaml  published.md  references.bib  references_cleaned.bib
published/: index.html
ref_heading/: index.html
removed_chapter_09/: index.html
search/: search_index.json
site/: index.md
src/: _references_inter.bib  caltech_thesis.cls  clean_references.py  give_figures_path_info.py  index.md  metadata.yaml  ref_formatting_site.yaml  references.bib  references_cleaned.bib  references_inter.bib  thesis.tex  to_install.txt
styles/: apa_md.csl  template.tex
stylesheets/: extra.css  tippy.css
(+372 files in other folders)
