[project]
name = "phd-thesis"
version = "0.1.0"
description = "Phd thesis of Andrew Mueller, compiled to LaTex and a website from a common markdown source."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bibtexparser>=2.0.0b8",
    "mkdocs-bibtex==2.11.0",
    "mkdocs-material==9.5.3",
    "pybtex>=0.24.0",
    "pypandoc==1.11",
    "requests==2.31.0",
    "setuptools>=80.9.0",
    "validators==0.20.0",
]
